# chat-vision-demo

./: .env.example  .gitignore  DEMO_IMPLEMENTATION_REPORT.md  KNOWN_LIMITATIONS.md  README.md  pyproject.toml
openapi/: openapi.json
scripts/: start-recording-demo.ps1  start-windows-demo.ps1  stop-windows-demo.ps1
src/chat_vision_demo/: capture.py  cli.py  clients.py  models.py  openapi_contract.py  runner.py  server.py  smoke.py  state.py  sync.py  windows_window.py
src/chat_vision_demo/static/: app.js  index.html  mobile.html  style.css
tests/: test_clients.py  test_messages.py  test_server_state.py
