[project]
name = "chat-vision-demo"
version = "0.1.0"
description = "Local Chat Vision API demo harness for desktop chat window screen capture."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
screen = ["mss>=9.0"]
qr = ["qrcode[pil]>=7.4"]
windows = ["mss>=9.0", "qrcode[pil]>=7.4"]
dev = ["pytest>=8.0"]

[project.scripts]
chat-vision-demo = "chat_vision_demo.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
